[package]
name = "cheap-tree"
author = "Ville Juutila"
about = "Cheap copy of Tree CLI tool."
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
strip-ansi-escapes = "0.1.1"
